--- a/index.html
+++ b/index.html
@@ -256,17 +256,17 @@
               </div>
               <div class="col-base col-about-spec col-sm-6 col-md-4 slide-in-up delay-2">
                 <div class="service-item">
-                  <img alt="" width="46" src="img/img-icon/icon-architecture.png" loading="lazy">
+                  <img alt="" width="46" src="img/img-icon/icon-architecture.png">
                   <h3>Erfahrung & Kompetenz</h3>
                   <p>Ein Team aus qualifizierten Statikern und Ingenieuren</p>
                 </div>
                 <div class="service-item">
-                  <img alt="" width="58" src="img/img-icon/icon-interiors.png" loading="lazy">
+                  <img alt="" width="58" src="img/img-icon/icon-interiors.png">
                   <h3>Zuverlässigkeit & Präzision</h3>
                   <p>Planung nach höchsten Standards</p>
                 </div>
                 <div class="service-item">
-                  <img alt="" width="58" src="img/img-icon/icon-planing.png" loading="lazy">
+                  <img alt="" width="58" src="img/img-icon/icon-planing.png">
                   <h3>Digitale Prozesse</h3>
                   <p>Effiziente und schnelle Bearbeitung Ihrer Projekte</p>
                 </div>
@@ -514,7 +514,7 @@
       <!-- ROW 1 -->
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp breite slide-in-left">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy">
+          <img alt="" src="img/img-icon/icon-architecture.png">
           <h3>Tragwerksplanung</h3>
           <p>Unsere Expertise in der Tragwerksplanung garantiert Ihnen innovative und sichere 
             Ingenieurlösungen für Ihr Bauprojekt. Vertrauen Sie auf unsere zuverlässige Fachberatung 
@@ -525,7 +525,7 @@
 
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp slide-in-up" data-wow-delay="0.1s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy">
+          <img alt="" src="img/img-icon/icon-interiors.png">
           <h3>Standsicherheitsnachweis</h3>
           <p>Wir erstellen präzise Standsicherheitsnachweise für Ihr Bauvorhaben. 
             Mit modernster Software und erfahrenen Ingenieuren gewährleisten wir höchste Sicherheit, zuverlässige Berechnungen und optimale Statik für Ihr Projekt.</p>
@@ -535,7 +535,7 @@
 
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp position slide-in-right" data-wow-delay="0.2s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-planing.png" loading="lazy">
+          <img alt="" src="img/img-icon/icon-planing.png">
           <h3>Bauantrag</h3>
           <p>Erfolgreicher Bauantrag – Grundlage für sicheren Hausbau. Die Statikprüfung ist unerlässlich. 
             Wir bieten umfassende Informationen, Unterstützung und gewährleisten eine reibungslose Genehmigung Ihres Bauvorhabens.</p>
@@ -546,7 +546,7 @@
       <!-- ROW 2 -->
       <div class="col-base col-service col-sm-6 col-md-4 wow abstand fadeInUp slide-in-left" data-wow-delay="0.3s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-planing.png" loading="lazy">
+          <img alt="" src="img/img-icon/icon-planing.png">
           <h3>Schallschutznachweis</h3>
           <p>Ein effektiver Schallschutz ist nicht nur häufig gesetzlich vorgeschrieben, sondern kann auch zukünftige Probleme bei Verkauf oder Vermietung vermeiden. 
             Daher ist ein gut durchdachtes Schallschutzkonzept für die meisten Bauvorhaben unerlässlich.</p>
@@ -556,7 +556,7 @@
 
       <div class="col-base col-service col-sm-6 col-md-4 abstand wow fadeInUp slide-in-up" data-wow-delay="0.4s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy">
+          <img alt="" src="img/img-icon/icon-architecture.png">
           <h3>Wärmeschutznachweis</h3>
           <p>Wir bieten den erforderlichen Wärmeschutznachweis nach GEG für antragspflichtige Bauvorhaben, der nur von qualifizierten Architekten und Bauingenieuren erstellt werden darf.
              Wir unterstützen Sie dabei, alle behördlichen Anforderungen zu erfüllen.</p>
@@ -566,7 +566,7 @@
 
       <div class="col-base col-service col-sm-6 col-md-4  abstand wow fadeInUp slide-in-right" data-wow-delay="0.5s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy">
+          <img alt="" src="img/img-icon/icon-architecture.png">
           <h3>Bewehrungsplan</h3>
           <p>Als professionelles Ingenieurbüro erstellen wir Bewehrungs- und Schalpläne für Ihre Bauprojekte. 
             Unser Leistungsspektrum umfasst zudem Positionspläne, Lasten- und Lastenabtragspläne sowie Konstruktionspläne im Stahlbau.</p>
@@ -577,7 +577,7 @@
       <!-- ROW 3 -->
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp slide-in-left" data-wow-delay="0.6s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy">
+          <img alt="" src="img/img-icon/icon-interiors.png">
           <h3>Energieausweis</h3>
           <p>Wissen Sie, ob Ihr Gebäude effizient oder energieintensiv ist? Ein Energieausweis schafft Klarheit. 
             Wir unterstützen Sie bei der energetischen Bewertung gemäß dem Gebäudeenergiegesetz (GEG) und entwickeln individuelle Lösungen für die Ausstellung von Energieausweisen.</p>
@@ -587,7 +587,7 @@
 
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp slide-in-right" data-wow-delay="0.7s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy">
+          <img alt="" src="img/img-icon/icon-interiors.png">
           <h3>Brandschutznachweis</h3>
           <p>Wir bieten professionelle Brandschutzplanung und -beratung für maximale Sicherheit Ihrer Gebäude – von Bürokomplexen bis Eigenheimen. 
             Vertrauen Sie auf unsere maßgeschneiderten Lösungen und unser erfahrenes Team!</p>
