--- a/index.html
+++ b/index.html
@@ -256,17 +256,17 @@
               </div>
               <div class="col-base col-about-spec col-sm-6 col-md-4 slide-in-up delay-2">
                 <div class="service-item">
-                  <img alt="" width="46" src="img/img-icon/icon-architecture.png">
+                  <img alt="" width="46" src="img/img-icon/icon-architecture.png" loading="lazy">
                   <h3>Erfahrung & Kompetenz</h3>
                   <p>Ein Team aus qualifizierten Statikern und Ingenieuren</p>
                 </div>
                 <div class="service-item">
-                  <img alt="" width="58" src="img/img-icon/icon-interiors.png">
+                  <img alt="" width="58" src="img/img-icon/icon-interiors.png" loading="lazy">
                   <h3>Zuverlässigkeit & Präzision</h3>
                   <p>Planung nach höchsten Standards</p>
                 </div>
                 <div class="service-item">
-                  <img alt="" width="58" src="img/img-icon/icon-planing.png">
+                  <img alt="" width="58" src="img/img-icon/icon-planing.png" loading="lazy">
                   <h3>Digitale Prozesse</h3>
                   <p>Effiziente und schnelle Bearbeitung Ihrer Projekte</p>
                 </div>
@@ -424,11 +424,6 @@
             </div>
           </div>
         </div>
-        <div class="container" style="text-align: center; margin-top: 60px;">
-          <a href="projekte.html" class="alle-projekte-button">
-            <span class="alle-projekte-label">Alle Projekte ansehen</span>
-          </a>
-        </div>
         <style>
           .alle-projekte-button {
             display: inline-block;
@@ -514,84 +509,76 @@
       <!-- ROW 1 -->
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp breite slide-in-left">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-architecture.png">
+          <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy">
           <h3>Tragwerksplanung</h3>
           <p>Unsere Expertise in der Tragwerksplanung garantiert Ihnen innovative und sichere 
             Ingenieurlösungen für Ihr Bauprojekt. Vertrauen Sie auf unsere zuverlässige Fachberatung 
             für optimale Statik und Konstruktion!</p>
-          <a href="projects.html#tragwerksplanung" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp slide-in-up" data-wow-delay="0.1s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-interiors.png">
+          <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy">
           <h3>Standsicherheitsnachweis</h3>
           <p>Wir erstellen präzise Standsicherheitsnachweise für Ihr Bauvorhaben. 
             Mit modernster Software und erfahrenen Ingenieuren gewährleisten wir höchste Sicherheit, zuverlässige Berechnungen und optimale Statik für Ihr Projekt.</p>
-          <a href="projects.html#standsicherheitsnachweis" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp position slide-in-right" data-wow-delay="0.2s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-planing.png">
+          <img alt="" src="img/img-icon/icon-planing.png" loading="lazy">
           <h3>Bauantrag</h3>
           <p>Erfolgreicher Bauantrag – Grundlage für sicheren Hausbau. Die Statikprüfung ist unerlässlich. 
             Wir bieten umfassende Informationen, Unterstützung und gewährleisten eine reibungslose Genehmigung Ihres Bauvorhabens.</p>
-          <a href="projects.html#bauantrag" class="btn btn-sm ">Mehr erfahren</a>
         </div>
       </div>
 
       <!-- ROW 2 -->
       <div class="col-base col-service col-sm-6 col-md-4 wow abstand fadeInUp slide-in-left" data-wow-delay="0.3s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-planing.png">
+          <img alt="" src="img/img-icon/icon-planing.png" loading="lazy">
           <h3>Schallschutznachweis</h3>
           <p>Ein effektiver Schallschutz ist nicht nur häufig gesetzlich vorgeschrieben, sondern kann auch zukünftige Probleme bei Verkauf oder Vermietung vermeiden. 
             Daher ist ein gut durchdachtes Schallschutzkonzept für die meisten Bauvorhaben unerlässlich.</p>
-          <a href="projects.html#schallschutznachweis" class="btn button btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4 abstand wow fadeInUp slide-in-up" data-wow-delay="0.4s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-architecture.png">
+          <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy">
           <h3>Wärmeschutznachweis</h3>
           <p>Wir bieten den erforderlichen Wärmeschutznachweis nach GEG für antragspflichtige Bauvorhaben, der nur von qualifizierten Architekten und Bauingenieuren erstellt werden darf.
              Wir unterstützen Sie dabei, alle behördlichen Anforderungen zu erfüllen.</p>
-          <a href="projects.html#wärmeschutznachweis" class="btn button btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4  abstand wow fadeInUp slide-in-right" data-wow-delay="0.5s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-architecture.png">
+          <img alt="" src="img/img-icon/icon-architecture.png" loading="lazy">
           <h3>Bewehrungsplan</h3>
           <p>Als professionelles Ingenieurbüro erstellen wir Bewehrungs- und Schalpläne für Ihre Bauprojekte. 
             Unser Leistungsspektrum umfasst zudem Positionspläne, Lasten- und Lastenabtragspläne sowie Konstruktionspläne im Stahlbau.</p>
-          <a href="projects.html#bewehrungsplan" class="btn button btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <!-- ROW 3 -->
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp slide-in-left" data-wow-delay="0.6s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-interiors.png">
+          <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy">
           <h3>Energieausweis</h3>
           <p>Wissen Sie, ob Ihr Gebäude effizient oder energieintensiv ist? Ein Energieausweis schafft Klarheit. 
             Wir unterstützen Sie bei der energetischen Bewertung gemäß dem Gebäudeenergiegesetz (GEG) und entwickeln individuelle Lösungen für die Ausstellung von Energieausweisen.</p>
-          <a href="projects.html#energieausweis" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
       <div class="col-base col-service col-sm-6 col-md-4 wow fadeInUp slide-in-right" data-wow-delay="0.7s">
         <div class="service-item">
-          <img alt="" src="img/img-icon/icon-interiors.png">
+          <img alt="" src="img/img-icon/icon-interiors.png" loading="lazy">
           <h3>Brandschutznachweis</h3>
           <p>Wir bieten professionelle Brandschutzplanung und -beratung für maximale Sicherheit Ihrer Gebäude – von Bürokomplexen bis Eigenheimen. 
             Vertrauen Sie auf unsere maßgeschneiderten Lösungen und unser erfahrenes Team!</p>
-          <a href="projects.html#brandschutznachweis" class="btn btn-sm">Mehr erfahren</a>
         </div>
       </div>
 
@@ -744,9 +731,6 @@
               </li>
             </ul>
           </div>
-          <div>
-            <a href="contacts.html" class="btn btn-shadow-2">Jetzt zusammen arbeiten<i class="icon-next"></i></a>
-          </div>
         </div>
       </section>
 
@@ -760,9 +744,6 @@
           <div class="section-content">
             <script src="https://elfsightcdn.com/platform.js" ></script>
             <div class="elfsight-app-ead9122e-f2bf-4770-8f37-ee1a083c4c4d" ></div>
-          </div>
-          <div class="button-div">
-            <a href="https://maps.app.goo.gl/rF9WZVQ9SBgsgTk18" class="btn btn-shadow-2">Bewertung abgeben<i class="icon-next"></i></a>
           </div>
         </div>
       </section>
@@ -780,31 +761,31 @@
               <div class="col-base col-md-12">
                 <div class="faq-list">
                   <div class="faq-item-enhanced">
-                    <button class="faq-question-enhanced">Wann benötigt man einen Statiker?</button>
+                    <div class="faq-question-enhanced">Wann benötigt man einen Statiker?</div>
                     <div class="faq-answer-enhanced">
                       <p>Ein Statiker wird benötigt, wenn bauliche Maßnahmen die Tragfähigkeit oder Standsicherheit eines Gebäudes beeinträchtigen könnten. Dies ist bei Neubauten, Umbauten, Aufstockungen oder größeren Sanierungen der Fall. Wir beraten Sie gerne über die Notwendigkeit einer statischen Berechnung für Ihr spezifisches Bauvorhaben.</p>
                     </div>
                   </div>
                   <div class="faq-item-enhanced">
-                    <button class="faq-question-enhanced">Was kostet ein Statiker?</button>
+                    <div class="faq-question-enhanced">Was kostet ein Statiker?</div>
                     <div class="faq-answer-enhanced">
                       <p>Die Kosten für einen Statiker richten sich nach der Größe und Komplexität des Bauvorhabens. Wir bieten Ihnen innerhalb von 24 Stunden nach Ihrer Kontaktaufnahme ein unverbindliches Angebot. Unsere Preise sind transparent und fair - ohne versteckte Kosten.</p>
                     </div>
                   </div>
                   <div class="faq-item-enhanced">
-                    <button class="faq-question-enhanced">Welche Unterlagen benötigt ein Statiker?</button>
+                    <div class="faq-question-enhanced">Welche Unterlagen benötigt ein Statiker?</div>
                     <div class="faq-answer-enhanced">
                       <p>Grundsätzlich benötigen wir Baupläne, Grundstücksdaten, Baugrundgutachten und Informationen über die geplante Nutzung. Bei einem ersten Gespräch klären wir gemeinsam, welche spezifischen Unterlagen für Ihr Projekt erforderlich sind. Wir unterstützen Sie auch bei der Beschaffung fehlender Dokumente.</p>
                     </div>
                   </div>
                   <div class="faq-item-enhanced">
-                    <button class="faq-question-enhanced">Was macht ein Statiker genau?</button>
+                    <div class="faq-question-enhanced">Was macht ein Statiker genau?</div>
                     <div class="faq-answer-enhanced">
                       <p>Ein Statiker plant und berechnet die tragenden Teile eines Gebäudes. Er erstellt statische Berechnungen, Standsicherheitsnachweise und Bewehrungspläne, um die Sicherheit und Stabilität des Bauwerks zu gewährleisten. Zusätzlich berät er bei der Materialauswahl und Konstruktionsoptimierung.</p>
                     </div>
                   </div>
                   <div class="faq-item-enhanced">
-                    <button class="faq-question-enhanced">Wer darf Bauanträge einreichen?</button>
+                    <div class="faq-question-enhanced">Wer darf Bauanträge einreichen?</div>
                     <div class="faq-answer-enhanced">
                       <p>Bauanträge können von Bauherren, Architekten oder Bauingenieuren eingereicht werden. Wir unterstützen Sie bei der Zusammenstellung aller erforderlichen Unterlagen für Ihren Bauantrag und begleiten Sie durch den gesamten Genehmigungsprozess.</p>
                     </div>
@@ -871,7 +852,6 @@
                       </div>
                     </div>
                     <div class="form-submit text-right">
-                      <button type="submit" class="btn-enhanced">Senden</button>
                     </div>
                   </form>
                 </div>
@@ -1444,16 +1424,7 @@ $(document).ready(function() {
     checkScroll(); // Check on load
   } else {
     // Auf Mobile: Mache alle scroll-animate Elemente sofort sichtbar
-    // WICHTIG: Direkt inline styles setzen, um Layout-Shifts zu vermeiden
-    $('.scroll-animate, .animate-stagger').each(function() {
-      $(this).css({
-        'opacity': '1',
-        'visibility': 'visible',
-        'transform': 'none',
-        'transition': 'none',
-        'animation': 'none'
-      }).addClass('animate');
-    });
+    $('.scroll-animate').addClass('animate');
   }
 
   // Enhanced Service Card Animations - NUR auf Desktop
