test without js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <link href="css/neuemachina-font.css" rel="stylesheet" media="screen">
 <link href="css/futuristic-design.css" rel="stylesheet" media="screen">
 <link href="css/performance-animations.css" rel="stylesheet" media="screen">
+<!-- TEMPORÄR AUSKOMMENTIERT ZUM TESTEN -->
+<!--
 <script>
 // Verhindere direktes Springen zu Hash beim Laden der Seite
 // Dies muss sehr früh ausgeführt werden, bevor der Browser springt
@@ -48,6 +50,7 @@
   }
 })();
 </script>
+-->
 </head>
 <body class="home-page">
   
@@ -944,7 +947,8 @@
   </div>
 
 <!-- SCRIPTS -->
-
+<!-- TEMPORÄR AUSKOMMENTIERT ZUM TESTEN -->
+<!--
 <script src="js/perf-helpers.js" defer></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -956,6 +960,7 @@
 <script src="js/owl.carousel.min.js" defer></script>
 <script src="js/interface.js" defer></script>
 <script src="js/scroll-animations.js" defer></script>
+-->
 
 <style>
 .grid-3 {
@@ -1168,6 +1173,8 @@
 }
 </style>
 
+<!-- TEMPORÄR AUSKOMMENTIERT ZUM TESTEN -->
+<!--
 <script>
 // Deaktiviere Browser-eigene Scroll-Restoration auf Mobile (sofort, bevor jQuery geladen ist)
 $(document).ready(function() {
@@ -1474,6 +1481,7 @@ $(document).ready(function() {
   }
 });
 </script>
+-->
 
 </body>
 </html>
