--- a/index.html
+++ b/index.html
@@ -947,10 +947,10 @@
   </div>
 
 <!-- SCRIPTS -->
-<!-- TEMPORÄR AUSKOMMENTIERT ZUM TESTEN -->
+<!-- TESTE EINE NACH DER ANDEREN -->
+<script src="js/jquery.min.js"></script>
 <!--
 <script src="js/perf-helpers.js" defer></script>
-<script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/smoothscroll.js" defer></script>
 <script src="js/jquery.validate.min.js" defer></script>
