--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 <link href="css/neuemachina-font.css" rel="stylesheet" media="screen">
 <link href="css/futuristic-design.css" rel="stylesheet" media="screen">
 <link href="css/performance-animations.css" rel="stylesheet" media="screen">
-<!-- TEMPORÄR AUSKOMMENTIERT ZUM TESTEN -->
-<!--
 <script>
 // Verhindere direktes Springen zu Hash beim Laden der Seite
 // Dies muss sehr früh ausgeführt werden, bevor der Browser springt
@@ -50,7 +48,6 @@
   }
 })();
 </script>
--->
 </head>
 <body class="home-page">
   
@@ -947,20 +944,18 @@
   </div>
 
 <!-- SCRIPTS -->
-<!-- TESTE EINE NACH DER ANDEREN -->
-<script src="js/jquery.min.js"></script>
-<!--
 <script src="js/perf-helpers.js" defer></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/smoothscroll.js" defer></script>
 <script src="js/jquery.validate.min.js" defer></script>
-<script src="js/wow.min.js" defer></script>
+<!-- WOW.MIN.JS DEAKTIVIERT ZUM TESTEN -->
+<!--<script src="js/wow.min.js" defer></script>-->
 <script src="js/jquery.stellar.min.js" defer></script>
 <script src="js/jquery.magnific-popup.js" defer></script>
 <script src="js/owl.carousel.min.js" defer></script>
 <script src="js/interface.js" defer></script>
 <script src="js/scroll-animations.js" defer></script>
--->
 
 <style>
 .grid-3 {
@@ -1173,8 +1168,6 @@
 }
 </style>
 
-<!-- TEMPORÄR AUSKOMMENTIERT ZUM TESTEN -->
-<!--
 <script>
 // Deaktiviere Browser-eigene Scroll-Restoration auf Mobile (sofort, bevor jQuery geladen ist)
 $(document).ready(function() {
@@ -1481,7 +1474,6 @@ $(document).ready(function() {
   }
 });
 </script>
--->
 
 </body>
 </html>
