--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <link href="css/neuemachina-font.css" rel="stylesheet" media="screen">
 <link href="css/futuristic-design.css" rel="stylesheet" media="screen">
 <link href="css/performance-animations.css" rel="stylesheet" media="screen">
+<!-- INLINE SCRIPT AUSKOMMENTIERT -->
+<!--
 <script>
 // Verhindere direktes Springen zu Hash beim Laden der Seite
 // Dies muss sehr früh ausgeführt werden, bevor der Browser springt
@@ -48,6 +50,7 @@
   }
 })();
 </script>
+-->
 </head>
 <body class="home-page">
   
@@ -943,14 +946,14 @@
     </div>
   </div>
 
-<!-- SCRIPTS -->
+
+
 <script src="js/perf-helpers.js" defer></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/smoothscroll.js" defer></script>
 <script src="js/jquery.validate.min.js" defer></script>
-<!-- WOW.MIN.JS DEAKTIVIERT ZUM TESTEN -->
-<!--<script src="js/wow.min.js" defer></script>-->
+<script src="js/wow.min.js" defer></script>
 <script src="js/jquery.stellar.min.js" defer></script>
 <script src="js/jquery.magnific-popup.js" defer></script>
 <script src="js/owl.carousel.min.js" defer></script>
@@ -1168,6 +1171,8 @@
 }
 </style>
 
+<!-- INLINE SCRIPT AUSKOMMENTIERT -->
+<!--
 <script>
 // Deaktiviere Browser-eigene Scroll-Restoration auf Mobile (sofort, bevor jQuery geladen ist)
 $(document).ready(function() {
@@ -1474,6 +1479,7 @@ $(document).ready(function() {
   }
 });
 </script>
+-->
 
 </body>
 </html>
