--- a/index.html
+++ b/index.html
@@ -1353,8 +1353,20 @@ $(document).ready(function() {
         
         return false;
       } else {
-        // Für Links zu anderen Seiten: Schließe Menü SOFORT
-        closeMenu();
+        // Für Links zu anderen Seiten: Schließe Menü SOFORT und navigiere
+        // Auf Mobile: Warte kurz damit Menü geschlossen ist, dann navigiere
+        if ($(window).width() <= 991) {
+          e.preventDefault();
+          closeMenu();
+          // Kurze Verzögerung damit Menü geschlossen ist, dann navigiere
+          setTimeout(function() {
+            window.location.href = href;
+          }, 150);
+          return false;
+        } else {
+          // Desktop: Schließe Menü, Navigation passiert automatisch
+          closeMenu();
+        }
       }
     }
     // Submenü-Links (z.B. "Tragwerksplanung", "Bauantrag") schließen auch das Menü
@@ -1403,7 +1415,17 @@ $(document).ready(function() {
         
         return false;
       } else {
-        closeMenu();
+        // Für normale Links im Submenü: Schließe Menü und navigiere
+        if ($(window).width() <= 991) {
+          e.preventDefault();
+          closeMenu();
+          setTimeout(function() {
+            window.location.href = href;
+          }, 150);
+          return false;
+        } else {
+          closeMenu();
+        }
       }
     }
   });
