--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
     
     <!-- Home / Hero Section -->
     
-    <main class="main">
-      <iframe
-        class="frame"
+    <main style="width: 100%; height:100%">
+      <iframe style="width: 100%; height:100%"
+        class=""
         src="https://drone-map-ix8j.vercel.app/embed"
         allow="fullscreen"
         loading="lazy"
