--- a/index.html
+++ b/index.html
@@ -208,9 +208,8 @@
     
     <!-- Home / Hero Section -->
     
-    <main style="width: 100%; height:100%">
-      <iframe style="width: 100%; height:100%"
-        class=""
+    <main class="hero-main">
+      <iframe class="hero-iframe"
         src="https://drone-map-ix8j.vercel.app/embed"
         allow="fullscreen"
         loading="lazy"
