--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     
     <!-- Home / Hero Section -->
     
-    <main class="hero-main">
+    <main class="hero-main" style="z-index: 100000000000000000000">
       <iframe class="hero-iframe"
         src="https://drone-map-ix8j.vercel.app/embed"
         allow="fullscreen"
